Uses local tmp directory

--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -24,6 +24,7 @@
 {{-   $osid = printf "%s-%s" .chezmoi.os .chezmoi.osRelease.id -}}
 {{- end -}}
 
+scriptTempDir: "~/tmp"
 git:
   autoCommit: true
   autoPush: true
