--- a/home/.chezmoiscripts/linux/run_once_before_install-git-town.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_before_install-git-town.sh.tmpl
@@ -2,6 +2,6 @@
 
 GTVersion=7.7.0
 
-{{- if eq .os "linux" -}}
+{{- if eq .chezmoi.os "linux" -}}
 curl https://www.git-town.com/install.sh | sh
 {{ end -}}
