--- a/home/.chezmoiscripts/darwin/run_once_before_install-packages-darwin.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_once_before_install-packages-darwin.sh.tmpl
@@ -16,6 +16,7 @@ tap "homebrew/cask-fonts"
 brew "dockutil"
 brew "git-delta"
 brew "git-town"
+brew "gpg"
 brew "neofetch"
 brew "tmux"
 brew "vim"
