--- a/home/.chezmoiscripts/darwin/run_once_before_install-packages-darwin.sh.tmpl
+++ b/home/.chezmoiscripts/darwin/run_once_before_install-packages-darwin.sh.tmpl
@@ -18,6 +18,7 @@ brew "git-delta"
 brew "git-town"
 brew "gpg"
 brew "neofetch"
+brew "pinentry-mac"
 brew "tmux"
 brew "vim"
 brew "zsh-autosuggestions"
