--- a/home/.chezmoiscripts/linux/run_once_before_install-git-town.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_before_install-git-town.sh.tmpl
@@ -1,4 +1,4 @@
-{{- if eq .chezmoi.os "linux" -}}
+{{ if (eq .chezmoi.os "linux") -}}
 #!/bin/bash
 GTVersion=7.7.0
 curl https://www.git-town.com/install.sh | sh
