Adds work GPG key id

--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -19,7 +19,7 @@
 {{-   if eq $environment "personal" -}}
 {{-     $gpg_key = "FAAFAF0EBAB3CC10CD5D51FA3A643C8EDF173DCC" -}}
 {{-   else -}}
-{{-     $gpg_key = "" -}}
+{{-     $gpg_key = "21BF846150573BD3557CABB90BFC25F27D4D5207" -}}
 {{-   end -}}
 {{- end -}}
 
