--- a/home/.chezmoiscripts/linux/run_once_before_install-packages-linux-fedora.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_before_install-packages-linux-fedora.sh.tmpl
@@ -19,6 +19,7 @@ sudo dnf -y install bzip2 \
                     tmux \
                     util-linux-user \
                     vim \
+                    wget \
                     zlib-devel \
                     zsh \
 
