--- a/home/.chezmoiscripts/linux/run_once_before_install-packages-linux.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_before_install-packages-linux.sh.tmpl
@@ -10,6 +10,7 @@ sudo apt -y install curl \
                     rbenv \
                     tmux \
                     vim \
+                    wget \
                     zsh \
 
 {{ end -}}
