--- a/home/.chezmoiscripts/linux/run_once_before_install-packages-linux-rhel.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_before_install-packages-linux-rhel.sh.tmpl
@@ -7,6 +7,7 @@ sudo yum -y install curl \
                     gem \
                     tmux \
                     vim \
+                    wget \
                     zsh \
 
 {{ end -}}
