--- a/home/.chezmoiscripts/linux/run_once_before_install-packages-linux.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_before_install-packages-linux.sh.tmpl
@@ -13,4 +13,7 @@ sudo apt -y install curl \
                     wget \
                     zsh \
 
+# Install Git-Town
+curl https://git-town.com/install.sh | sh
+
 {{ end -}}
