--- a/home/.chezmoiscripts/linux/run_once_before_install-packages-linux.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_before_install-packages-linux.sh.tmpl
@@ -14,6 +14,6 @@ sudo apt -y install curl \
                     zsh \
 
 # Install Git-Town
-curl https://git-town.com/install.sh | sh
+curl -L https://git-town.com/install.sh | sh
 
 {{ end -}}
