--- a/home/.chezmoiscripts/linux/run_once_before_install-packages-linux.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_before_install-packages-linux.sh.tmpl
@@ -8,11 +8,13 @@ sudo apt -y install curl \
                     gem \
                     neofetch \
                     rbenv \
+                    ruby \
+                    ruby-colorize \
+                    ruby-dev \
                     tmux \
                     vim \
                     wget \
                     zsh \
-
 # Install Git-Town
 curl -L https://git-town.com/install.sh | sh
 
