--- a/home/.chezmoiscripts/linux/run_onchange_before_install-op.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-op.sh.tmpl
@@ -17,4 +17,9 @@ cd ${tempdir}
 curl -LO https://cache.agilebits.com/dist/1P/op/pkg/v${OP_VERSION}/${FILENAME}
 unzip ${FILENAME} op
 mv op ${HOME}/.local/bin
+
+
+# Colorls
+sudo gem install colorls
+
 {{ end -}}
