Converted Brewfile to template

--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -108,6 +108,14 @@ brew "zsh-completions"
 brew "zsh-syntax-highlighting"
 brew "zsh"
 
+{{- if eq .environment "work" }}
+
+{{- end }}
+
+{{- if eq .environment "personal" }}
+
+{{- end }}
+
 # ============================================================================
 # = Homebrew Casks
 # ============================================================================
@@ -167,6 +175,12 @@ cask "visual-studio-code-insiders"
 cask "visual-studio-code"
 cask "vlc"
 
+{{- if eq .environment "work" }}
+
+{{- end }}
+
+{{- if eq .environment "personal" }}
+
 cask "aerial"
 cask "arq"
 cask "anylist"
@@ -182,6 +196,8 @@ cask "silentknight"
 cask "skim"
 cask "tor-browser-alpha"
 cask "viscosity"
+
+{{- end }}
 
 # ============================================================================
 # = Mac App Store
@@ -208,6 +224,12 @@ mas "TableFlip", id: 1462643128
 mas "The Clock", id: 488764545
 mas "Xcode", id: 497799835
 
+{{- if eq .environment "work" }}
+
+{{- end }}
+
+{{- if eq .environment "personal" }}
+
 mas "1Blocker", id: 1107421413
 mas "Cardhop", id: 1290358394
 mas "Day One", id: 1055511498
@@ -218,3 +240,5 @@ mas "Numbers", id:409203825
 mas "Pages", id: 409201541
 mas "Paprika Recipe Manager 3", id: 1303222628
 mas "Pastel", id:413897608
+
+{{- end }}
