Updates bundle packages

--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -34,6 +34,7 @@ brew "ctags"
 brew "curl"
 brew "dash"
 brew "direnv"
+brew "docker"
 brew "dockutil"
 brew "dos2unix"
 brew "findutils"
@@ -50,6 +51,7 @@ brew "glow"
 brew "gmp"
 brew "gnupg2"
 brew "go"
+brew "graphviz"
 brew "grep"
 brew "helm"
 brew "highlight"
@@ -90,6 +92,7 @@ brew "ssh-copy-id"
 brew "streamlink"
 brew "switchaudio-osx"
 brew "terraform", link: false
+brew "tfsec"
 brew "tmux"
 brew "tmuxinator"
 brew "trash"
@@ -162,6 +165,7 @@ cask "powershell"
 cask "pycharm"
 cask "raindropio"
 cask "setapp"
+cask "silentknight"
 cask "signal"
 cask "slack"
 cask "snagit"
@@ -174,6 +178,7 @@ cask "transmit"
 cask "visual-studio-code-insiders"
 cask "visual-studio-code"
 cask "vlc"
+cask "zoom"
 
 {{- if eq .environment "work" }}
 
@@ -192,7 +197,6 @@ cask "mailmate"
 cask "minecraft"
 cask "parallels"
 cask "private-internet-access"
-cask "silentknight"
 cask "skim"
 cask "tor-browser-alpha"
 cask "viscosity"
@@ -212,9 +216,7 @@ mas "DuckDuckGo Privacy Essentials", id: 1482920575
 mas "Grammarly for Safari", id: 1462114288
 mas "Highlights", id: 1498912833
 mas "Magnet", id: 441258766
-# mas "Marked 2", id: 890031187
 mas "Moom", id: 419330170
-# mas "Pocket", id: 568494494
 mas "Raindrop.io for Safari", id: 957810159
 mas "Reeder", id: 1529448980
 mas "Save to Raindrop.io", id: 1549370672
