--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -216,7 +216,8 @@ mas "Drafts", id: 1435957248
 mas "DuckDuckGo Privacy Essentials", id: 1482920575
 mas "Grammarly for Safari", id: 1462114288
 mas "Highlights", id: 1498912833
-mas "Magnet", id: 441258766
+# Magnet doesn't work on the MacOS 13 beta
+# mas "Magnet", id: 441258766
 mas "Moom", id: 419330170
 mas "Raindrop.io for Safari", id: 957810159
 mas "Reeder", id: 1529448980
