--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -169,6 +169,7 @@ cask "raindropio"
 cask "setapp"
 cask "silentknight"
 cask "signal"
+cask "sf-symbols"
 cask "slack"
 cask "snagit"
 cask "soundsource"
