--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -161,6 +161,7 @@ cask "logi-options-plus"
 cask "macupdater"
 cask "microsoft-auto-update"
 cask "microsoft-edge"
+cask "microsoft-teams"
 cask "obsidian"
 cask "omnifocus"
 cask "powershell"
@@ -195,10 +196,13 @@ cask "anylist"
 cask "discord"
 cask "fastscripts"
 cask "gdlauncher"
+cask "imazing"
 cask "kindle"
 cask "mailmate"
 cask "minecraft"
 cask "parallels"
+cask "pocket-casts"
+cask "postman"
 cask "private-internet-access"
 cask "skim"
 cask "tor-browser-alpha"
