--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -62,6 +62,7 @@ brew "jandedobbeleer/oh-my-posh/oh-my-posh"
 brew "jenv"
 brew "jq"
 brew "kubernetes-cli"
+brew "less"
 brew "lesspipe"
 brew "libmagic"
 brew "lnav"
