--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -12,6 +12,7 @@ tap "homebrew/cask-versions"
 tap "homebrew/cask"
 tap "homebrew/core"
 tap "jandedobbeleer/oh-my-posh"
+tap "ttscoff/thelab"
 tap "warrensbox/tap"
 
 # ============================================================================
@@ -40,6 +41,7 @@ brew "dos2unix"
 brew "findutils"
 brew "freetds"
 brew "fzf"
+brew "gather-cli"
 brew "gh"
 brew "github-keygen"
 brew "ghostscript"
