--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -163,6 +163,7 @@ cask "grammarly-desktop"
 cask "hazel"
 cask "intellij-idea"
 cask "iterm2"
+cask "kaleidoscope"
 cask "keyboard-maestro"
 cask "logi-options-plus"
 cask "macupdater"
