--- a/home/private_dot_gitconfig.tmpl
+++ b/home/private_dot_gitconfig.tmpl
@@ -132,12 +132,13 @@ ff = only
 rebase = true
 
 [diff]
-tool = bcomp
+	tool = Kaleidoscope
 colorMoved = default
 
 [difftool]
 prompt = false
 
+	trustExitCode = true
 [difftool "bcomp"]
 trustExitCode = true
 cmd = "/usr/local/bin/bcomp  "
@@ -146,7 +147,7 @@ cmd = "/usr/local/bin/bcomp  "
 diffFilter = delta --color-only
 
 [merge]
-tool = bcomp
+	tool = Kaleidoscope
 
 [mergetool]
 prompt = false
@@ -174,3 +175,8 @@ file-style = bold yellow ul
 file-decoration-style = none
 [credential]
 	helper = osxkeychain
+[difftool "Kaleidoscope"]
+	cmd = ksdiff --partial-changeset --relative-path \"$MERGED\" -- \"$LOCAL\" \"$REMOTE\"
+[mergetool "Kaleidoscope"]
+	cmd = ksdiff --merge --output \"$MERGED\" --base \"$BASE\" -- \"$LOCAL\" --snapshot \"$REMOTE\" --snapshot
+	trustExitCode = true
