--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -64,7 +64,6 @@ brew "highlight"
 brew "htop"
 brew "hub"
 brew "imagemagick"
-brew "jandedobbeleer/oh-my-posh/oh-my-posh"
 brew "jenv"
 brew "jq"
 brew "kubernetes-cli"
@@ -122,6 +121,7 @@ brew "zsh"
 
 brew "checkov"
 brew "gitmoji"
+brew "gem-overcommit"
 brew "go-jira"
 brew "terraform-docs"
 
@@ -149,7 +149,7 @@ cask "devonthink"
 cask "docker"
 cask "dotnet-sdk"
 cask "dropbox-beta"
-cask "elgato-stream-deck"
+; cask "elgato-stream-deck"
 cask "elgato-thunderbolt-dock"
 cask "firefox"
 cask "font-fira-code-nerd-font"
@@ -163,6 +163,7 @@ cask "google-cloud-sdk"
 cask "gpg-suite-no-mail"
 cask "grammarly-desktop"
 cask "hazel"
+cask "hidock"
 cask "intellij-idea"
 cask "iterm2"
 cask "kaleidoscope"
@@ -178,6 +179,7 @@ cask "postman"
 cask "powershell"
 cask "pycharm"
 cask "raindropio"
+cask "safari-technology-preview"
 cask "setapp"
 cask "silentknight"
 cask "signal"
@@ -216,6 +218,7 @@ cask "pocket-casts"
 cask "postman"
 cask "private-internet-access"
 cask "skim"
+cask "spotify"
 cask "tor-browser-alpha"
 cask "viscosity"
 
