--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -98,6 +98,7 @@ brew "ssh-copy-id"
 brew "streamlink"
 brew "switchaudio-osx"
 brew "terraform", link: false
+brew "tflint"
 brew "tfsec"
 brew "tmux"
 brew "tmuxinator"
