--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -101,6 +101,7 @@ brew "switchaudio-osx"
 brew "terraform", link: false
 brew "tflint"
 brew "tfsec"
+brew "tfupdate"
 brew "tmux"
 brew "tmuxinator"
 brew "trash"
