--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -49,6 +49,9 @@ sudo dnf -y install bzip2 \
 {{ end -}}
 
 # Install Git-Town
+
+{{ if ne osid "linux-raspbian" -}}
 curl -L https://git-town.com/install.sh | sh
+{{ end -}}
 
 {{ end -}}
