--- a/home/.chezmoiscripts/linux/run_onchange_01-install-op.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_01-install-op.sh.tmpl
@@ -1,4 +1,4 @@
-{{ if (eq .osid "linux-debian" "linux-ubuntu") -}}
+{{ if (eq .osid "linux-debian" "linux-ubuntu" "linux-raspbian") -}}
 #!/bin/bash
 
 set -euo pipefail
