--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -1,7 +1,7 @@
 {{- if eq .chezmoi.os "linux" -}}
 #!/bin/bash
 
-{{ if (or (eq .osid "linux-ubuntu") (eq .osid "linux-debian") (eq .osid "linux-raspbian")) -}}
+{{ if (eq .osid "linux-debian" "linux-ubuntu" "linux-raspbian") -}}
 
 sudo apt -y install curl \
     direnv \
