--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -49,6 +49,7 @@ brew "gather-cli"
 brew "gh"
 brew "github-keygen"
 brew "ghostscript"
+brew "git-lfs"
 brew "git-delta"
 brew "git-town"
 brew "git"
