--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -12,15 +12,13 @@
 {{-   $environment = promptString "Environment (personal,work)" -}}
 {{- end -}}
 
-{{- $gpg_key := "" -}}
-{{- if hasKey . "gpg_key" -}}
-{{-   $gpg_key = .gpg_key -}}
+{{- $github_ssh_key := "" -}}
+{{- if hasKey . "github_ssh_key" -}}
+{{-   $github_ssh_key = .github_ssh_key -}}
 {{- else -}}
 {{-   if eq $environment "personal" -}}
-{{-     $gpg_key = "FAAFAF0EBAB3CC10CD5D51FA3A643C8EDF173DCC" -}}
 {{-     $github_ssh_key = "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIJiHQKLIWf95xqxtYzmmUDTWAKRdUwdXznTgkh37MSZR" -}}
 {{-   else -}}
-{{-     $gpg_key = "21BF846150573BD3557CABB90BFC25F27D4D5207" -}}
 {{-     $github_ssh_key = "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIDQM63/8yrOoEq7/H3vWmwykwmn0FtVGmQFsOfAFTLQS" -}}
 {{-   end -}}
 {{- end -}}
