--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -153,6 +153,7 @@ cask "devonthink"
 cask "docker"
 cask "dotnet-sdk"
 cask "dropbox-beta"
+cask "elgato-stream-deck"
 cask "elgato-thunderbolt-dock"
 cask "firefox"
 cask "font-fira-code-nerd-font"
