--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -1,3 +1,5 @@
+{{- if eq .environment "work" }}
+
 [profile administrator-d3banking]
 sso_region = us-west-2
 sso_registration_scopes = sso:account:access
@@ -33,3 +35,5 @@ sso_start_url = https://ncr-digitalbanking.awsapps.com/start #
 output = yaml
 region = us-west-2
 sso_account_id = 604967826023
+
+{{- end }}
