--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -36,4 +36,12 @@ output = yaml
 region = us-west-2
 sso_account_id = 604967826023
 
+[profile administrator-sandbox]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = administrator
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 789706088473
 {{- end }}
