--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -36,7 +36,7 @@ output = yaml
 region = us-west-2
 sso_account_id = 604967826023
 
-[profile administrator-sandbox]
+[profile administrator-d3sandbox]
 sso_region = us-west-2
 sso_registration_scopes = sso:account:access
 sso_role_name = administrator
