--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -2,14 +2,14 @@
 # = Homebrew Taps
 # ============================================================================
 
+tap "1password/tap"
 tap "buo/cask-upgrade"
 tap "hashicorp/tap"
 tap "homebrew/bundle"
-tap "homebrew/core"
+tap "homebrew/cask"
 tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
-tap "homebrew/cask"
 tap "homebrew/core"
 tap "jandedobbeleer/oh-my-posh"
 tap "ttscoff/thelab"
@@ -22,6 +22,9 @@ tap "warrensbox/tap"
 brew "ack"
 brew "asciinema"
 brew "aspell"
+brew "aws-auth"
+brew "awscli"
+brew "azure-cli"
 brew "bash"
 brew "bat"
 brew "bottom"
@@ -32,31 +35,31 @@ brew "chrome-cli"
 brew "clang-format"
 brew "cloc"
 brew "colordiff"
-brew "commitizen"
+brew "commitizen", link: false
 brew "coreutils"
 brew "ctags"
 brew "curl"
 brew "dash"
 brew "delve"
 brew "direnv"
+brew "docker-credential-helper"
 brew "docker"
 brew "dockutil"
 brew "dos2unix"
 brew "findutils"
 brew "freetds"
 brew "fzf"
-brew "gather-cli"
 brew "gh"
-brew "github-keygen"
 brew "ghostscript"
-brew "git-lfs"
 brew "git-delta"
+brew "git-lfs"
 brew "git-town"
 brew "git"
+brew "github-keygen"
 brew "gitleaks"
 brew "glow"
 brew "gmp"
-brew "gnupg2"
+brew "gnupg"
 brew "go"
 brew "graphviz"
 brew "grep"
@@ -86,10 +89,10 @@ brew "p7zip"
 brew "packer"
 brew "pandoc"
 brew "pinentry-mac"
+brew "pipx"
 brew "pre-commit"
 brew "pygments"
-brew "python"
-brew "pipx"
+brew "python@3.11"
 brew "rbenv"
 brew "rename"
 brew "ruby-build"
@@ -107,8 +110,10 @@ brew "tmux"
 brew "tmuxinator"
 brew "trash"
 brew "tree"
+brew "ttscoff/thelab/gather-cli"
 brew "vagrant-completion"
 brew "vim"
+brew "virtualenv"
 brew "warrensbox/tap/tfswitch"
 brew "watch"
 brew "wget"
@@ -123,9 +128,12 @@ brew "zsh"
 
 {{- if eq .environment "work" }}
 
+brew "ansible"
+brew "ansible-lint"
 brew "checkov"
-brew "gitmoji"
+# brew "cloud-nuke"
 brew "gem-overcommit"
+brew "gitmoji"
 brew "go-jira"
 brew "terraform-docs"
 
@@ -143,10 +151,10 @@ cask "1password"
 cask "1password-cli"
 cask "airbuddy"
 cask "alfred"
+cask "arc"
 cask "beyond-compare"
 cask "brave-browser"
 cask "cheatsheet"
-cask "choosy"
 cask "dash"
 cask "datagrip"
 cask "devonthink"
@@ -238,19 +246,22 @@ mas "Battery Monitor", id:413678017
 mas "CARROT Weather", id:993487541
 mas "DaisyDisk", id: 411643860
 mas "Drafts", id: 1435957248
-mas "DuckDuckGo Privacy Essentials", id: 1482920575
+mas "DuckDuckGo Privacy for Safari", id: 1482920575
 mas "Grammarly for Safari", id: 1462114288
 mas "Highlights", id: 1498912833
+mas "Microsoft Remote Desktop", id: 1295203466
 mas "Moom", id: 419330170
 mas "Noir", id: 1592917505
 mas "PCalc", id: 403504866
 mas "Reeder", id: 1529448980
-mas "Save to Pocket", id: 1477385213
+mas "Save to Raindrop.io", id: 1549370672
+mas "Save to Reader", id: 1640236961
 mas "Service Station", id: 1503136033
 mas "ShareBot", id: 1597340986
 mas "Slack", id: 803453959
 mas "StopTheMadness", id: 1376402589
 mas "TableFlip", id: 1462643128
+mas "TestFlight", id: 899247664
 mas "The Clock", id: 488764545
 mas "Vinegar", id: 1591303229
 mas "Xcode", id: 497799835
@@ -277,3 +288,40 @@ mas "Pastel", id:413897608
 mas "Signals", id: 1453293391
 
 {{- end }}
+
+
+# ============================================================================
+# = VSCode Extensions
+# ============================================================================
+
+vscode "1Password.op-vscode"
+vscode "4ops.packer"
+vscode "aaron-bond.better-comments"
+vscode "alefragnani.Bookmarks"
+vscode "atlassian.atlascode"
+vscode "bierner.markdown-preview-github-styles"
+vscode "Catppuccin.catppuccin-vsc"
+vscode "chrisdias.vscode-opennewinstance"
+vscode "DavidAnson.vscode-markdownlint"
+vscode "eamodio.gitlens"
+vscode "EditorConfig.EditorConfig"
+vscode "fredwangwang.vscode-hcl-format"
+vscode "GitHub.remotehub"
+vscode "github.vscode-github-actions"
+vscode "GitHub.vscode-pull-request-github"
+vscode "golang.go"
+vscode "googlecloudtools.cloudcode"
+vscode "hashicorp.hcl"
+vscode "hashicorp.terraform"
+vscode "jasonnutter.vscode-codeowners"
+vscode "mechatroner.rainbow-csv"
+vscode "mindaro-dev.file-downloader"
+vscode "ms-python.python"
+vscode "ms-vscode.powershell"
+vscode "ms-vscode.remote-repositories"
+vscode "redhat.ansible"
+vscode "redhat.vscode-yaml"
+vscode "szTheory.vscode-packer-powertools"
+vscode "wesbos.theme-cobalt2"
+vscode "wholroyd.jinja"
+vscode "yzhang.markdown-all-in-one"
