--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -147,7 +147,7 @@ brew "terraform-docs"
 # = Homebrew Casks
 # ============================================================================
 
-cask "1password"
+cask "1password-beta"
 cask "1password-cli"
 cask "airbuddy"
 cask "alfred"
