--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -151,6 +151,7 @@ cask "1password-beta"
 cask "1password-cli"
 cask "airbuddy"
 cask "alfred"
+cask "amazon-workspaces"
 cask "arc"
 cask "beyond-compare"
 cask "brave-browser"
