--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -234,6 +234,8 @@ cask "skim"
 cask "spotify"
 cask "tor-browser-alpha"
 cask "viscosity"
+cask "warp"
+cask "zotero"
 
 {{- end }}
 
@@ -326,3 +328,6 @@ vscode "szTheory.vscode-packer-powertools"
 vscode "wesbos.theme-cobalt2"
 vscode "wholroyd.jinja"
 vscode "yzhang.markdown-all-in-one"
+vscode "bibhasdn.unique-lines"
+vscode "darkriszty.markdown-table-prettify"
+vscode "richie5um2.vscode-sort-json"
