--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -116,6 +116,7 @@ brew "vagrant-completion"
 brew "vim"
 brew "virtualenv"
 brew "warrensbox/tap/tfswitch"
+brew "warrensbox/tap/tgswitch"
 brew "watch"
 brew "wget"
 brew "whatmask"
