--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -103,6 +103,7 @@ brew "speedtest-cli"
 brew "ssh-copy-id"
 brew "streamlink"
 brew "switchaudio-osx"
+brew "terragrunt"
 brew "tflint"
 brew "tfsec"
 brew "tfupdate"
@@ -115,7 +116,6 @@ brew "vagrant-completion"
 brew "vim"
 brew "virtualenv"
 brew "warrensbox/tap/tfswitch"
-brew "warrensbox/tap/tgswitch"
 brew "watch"
 brew "wget"
 brew "whatmask"
