--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -44,4 +44,49 @@ sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
 output = yaml
 region = us-west-2
 sso_account_id = 789706088473
+
+[profile read-only-d3banking]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = read-only
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 087633845042
+
+[profile read-only-d3corp]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = read-only
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 740083677251
+
+[profile read-only-d3dankops]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = read-only
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 322653688247
+
+[profile read-only-dbkdi]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = read-only
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 604967826023
+
+[profile read-only-d3sandbox]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = read-only
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 789706088473
 {{- end }}
