--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -156,6 +156,8 @@ cask "alfred"
 cask "amazon-workspaces"
 cask "arc"
 cask "beyond-compare"
+cask "caldigit-thunderbolt-charging"
+cask "caldigit-docking-utility"
 cask "cheatsheet"
 cask "dash"
 cask "datagrip"
