--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -182,6 +182,7 @@ cask "hazel"
 cask "hidock"
 cask "intellij-idea"
 cask "iterm2"
+cask "logi-options-plus"
 cask "kaleidoscope"
 cask "keyboard-maestro"
 cask "keyboardcleantool"
