--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -292,7 +292,7 @@ mas "Mactracker", id: 430255202
 mas "Numbers", id:409203825
 mas "Pages", id: 409201541
 mas "Paprika Recipe Manager 3", id: 1303222628
-mas "Parcel", id: 639968404
+# mas "Parcel", id: 639968404
 mas "Pastel", id:413897608
 mas "Signals", id: 1453293391
 
