--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -6,11 +6,9 @@ tap "1password/tap"
 tap "buo/cask-upgrade"
 tap "hashicorp/tap"
 tap "homebrew/bundle"
-tap "homebrew/cask"
 tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 tap "jandedobbeleer/oh-my-posh"
 tap "ttscoff/thelab"
 tap "warrensbox/tap"
@@ -22,9 +20,6 @@ tap "warrensbox/tap"
 brew "ack"
 brew "asciinema"
 brew "aspell"
-brew "aws-auth"
-brew "awscli"
-brew "azure-cli"
 brew "bash"
 brew "bat"
 brew "bottom"
@@ -42,9 +37,6 @@ brew "curl"
 brew "dash"
 brew "delve"
 brew "direnv"
-brew "docker-credential-helper"
-brew "docker"
-brew "dockutil"
 brew "dos2unix"
 brew "findutils"
 brew "freetds"
@@ -129,10 +121,16 @@ brew "zsh"
 
 {{- if eq .environment "work" }}
 
-brew "ansible"
 brew "ansible-lint"
+brew "ansible"
+brew "aws-auth"
+brew "awscli"
+brew "azure-cli"
 brew "checkov"
-# brew "cloud-nuke"
+brew "cloud-nuke"
+brew "docker-credential-helper"
+brew "docker"
+brew "dockutil"
 brew "gem-overcommit"
 brew "gitmoji"
 brew "go-jira"
@@ -212,28 +210,28 @@ cask "visual-studio-code-insiders"
 cask "visual-studio-code"
 cask "vlc"
 cask "zoom"
+cask "zotero"
 
 {{- if eq .environment "work" }}
 
 cask "openlens"
+cask "drawio"
+cask "wireshark"
 
 {{- end }}
 
 {{- if eq .environment "personal" }}
 
-cask "aerial"
 cask "arq"
 cask "anylist"
 cask "brave-browser"
 cask "discord"
 cask "fastscripts"
-cask "gdlauncher"
 cask "imazing"
 cask "kindle"
 cask "mailmate"
 cask "minecraft"
 cask "parallels"
-cask "pocket-casts"
 cask "postman"
 cask "private-internet-access"
 cask "skim"
@@ -241,7 +239,6 @@ cask "spotify"
 cask "tor-browser-alpha"
 cask "viscosity"
 cask "warp"
-cask "zotero"
 
 {{- end }}
 
