--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -268,6 +268,8 @@ mas "Slack", id: 803453959
 mas "StopTheMadness", id: 1376402589
 mas "TableFlip", id: 1462643128
 mas "TestFlight", id: 899247664
+mas "Timery", id: 1425368544
+mas "Toggl Track", id: 1291898086
 mas "The Clock", id: 488764545
 mas "Vinegar", id: 1591303229
 mas "Xcode", id: 497799835
