--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -109,4 +109,22 @@ output = yaml
 region = us-west-2
 sso_account_id = 089290167525
 
+[profile administrator-d3secuprod]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = AWSAdministratorAccess
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 511722726439
+
+[profile readonly-d3secuprod]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = read-only
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 511722726439
+
 {{- end }}
