--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -115,7 +115,7 @@ sso_registration_scopes = sso:account:access
 sso_role_name = AWSAdministratorAccess
 sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
 output = yaml
-region = us-west-2
+region = us-east-2
 sso_account_id = 511722726439
 
 [profile readonly-d3secuprod]
@@ -124,7 +124,7 @@ sso_registration_scopes = sso:account:access
 sso_role_name = read-only
 sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
 output = yaml
-region = us-west-2
+region = us-east-2
 sso_account_id = 511722726439
 
 {{- end }}
