--- a/home/private_dot_Brewfile.tmpl
+++ b/home/private_dot_Brewfile.tmpl
@@ -53,6 +53,7 @@ brew "glow"
 brew "gmp"
 brew "gnupg"
 brew "go"
+brew "golangci-lint"
 brew "graphviz"
 brew "grep"
 brew "helm"
@@ -247,56 +248,56 @@ cask "warp"
 # = Mac App Store
 # ============================================================================
 
-mas "1Password for Safari", id: 1569813296
-mas "Baking Soda", id: 1601151613
-mas "Battery Monitor", id:413678017
-mas "CARROT Weather", id:993487541
-mas "DaisyDisk", id: 411643860
-mas "Drafts", id: 1435957248
-mas "DuckDuckGo Privacy for Safari", id: 1482920575
-mas "Grammarly for Safari", id: 1462114288
-mas "Highlights", id: 1498912833
-mas "Microsoft Remote Desktop", id: 1295203466
-mas "Moom", id: 419330170
-mas "Noir", id: 1592917505
-mas "PCalc", id: 403504866
-mas "Reeder", id: 1529448980
-mas "Save to Raindrop.io", id: 1549370672
-mas "Save to Reader", id: 1640236961
-mas "Service Station", id: 1503136033
-mas "ShareBot", id: 1597340986
-mas "Slack", id: 803453959
-mas "StopTheMadness", id: 1376402589
-mas "TableFlip", id: 1462643128
-mas "TestFlight", id: 899247664
-mas "Timery", id: 1425368544
-mas "Toggl Track", id: 1291898086
-mas "The Clock", id: 488764545
-mas "Vinegar", id: 1591303229
-mas "Xcode", id: 497799835
+# mas "1Password for Safari", id: 1569813296
+# mas "Baking Soda", id: 1601151613
+# mas "Battery Monitor", id:413678017
+# mas "CARROT Weather", id:993487541
+# mas "DaisyDisk", id: 411643860
+# mas "Drafts", id: 1435957248
+# mas "DuckDuckGo Privacy for Safari", id: 1482920575
+# mas "Grammarly for Safari", id: 1462114288
+# mas "Highlights", id: 1498912833
+# mas "Microsoft Remote Desktop", id: 1295203466
+# mas "Moom", id: 419330170
+# mas "Noir", id: 1592917505
+# mas "PCalc", id: 403504866
+# mas "Reeder", id: 1529448980
+# mas "Save to Raindrop.io", id: 1549370672
+# mas "Save to Reader", id: 1640236961
+# mas "Service Station", id: 1503136033
+# mas "ShareBot", id: 1597340986
+# mas "Slack", id: 803453959
+# mas "StopTheMadness", id: 1376402589
+# mas "TableFlip", id: 1462643128
+# mas "TestFlight", id: 899247664
+# mas "Timery", id: 1425368544
+# mas "Toggl Track", id: 1291898086
+# mas "The Clock", id: 488764545
+# mas "Vinegar", id: 1591303229
+# mas "Xcode", id: 497799835
 
-{{- if eq .environment "work" }}
+# {{- if eq .environment "work" }}
 
-{{- end }}
+# {{- end }}
 
-{{- if eq .environment "personal" }}
+# {{- if eq .environment "personal" }}
 
-mas "Cardhop", id: 1290358394
-mas "Day One", id: 1055511498
-mas "Fantastical", id: 975937182
-mas "HomeControl", id: 1547121417
-mas "HomePass", id: 1330266650
-mas "Hush", id: 1544743900
-mas "Keynote", id: 409183694
-mas "Mactracker", id: 430255202
-mas "Numbers", id:409203825
-mas "Pages", id: 409201541
-mas "Paprika Recipe Manager 3", id: 1303222628
-# mas "Parcel", id: 639968404
-mas "Pastel", id:413897608
-mas "Signals", id: 1453293391
+# mas "Cardhop", id: 1290358394
+# mas "Day One", id: 1055511498
+# mas "Fantastical", id: 975937182
+# mas "HomeControl", id: 1547121417
+# mas "HomePass", id: 1330266650
+# mas "Hush", id: 1544743900
+# mas "Keynote", id: 409183694
+# mas "Mactracker", id: 430255202
+# mas "Numbers", id:409203825
+# mas "Pages", id: 409201541
+# mas "Paprika Recipe Manager 3", id: 1303222628
+# # mas "Parcel", id: 639968404
+# mas "Pastel", id:413897608
+# mas "Signals", id: 1453293391
 
-{{- end }}
+# {{- end }}
 
 
 # ============================================================================
