--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -4,6 +4,16 @@
 # Legacy
 ################################################################################
 
+
+[profile dankops-admin]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = administrator
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 322653688247
+
 # D3 Hosting Account
 [profile d3banking-admin]
 sso_region = us-west-2
