--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -25,6 +25,20 @@ region = us-west-2
 sso_account_id = 087633845042
 
 ################################################################################
+# Infrastructure & Security
+################################################################################
+
+# Log Archive
+[profile logarchive-admin]
+sso_region = us-west-2
+sso_registration_scopes = sso:account:access
+sso_role_name = AWSAdministratorAccess
+sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
+output = yaml
+region = us-west-2
+sso_account_id = 460535612184
+
+################################################################################
 # Global Networking
 ################################################################################
 
