--- a/home/dot_aws/private_config.tmpl
+++ b/home/dot_aws/private_config.tmpl
@@ -60,7 +60,7 @@ sso_account_id = 089290167525
 [profile sandbox-admin]
 sso_region = us-west-2
 sso_registration_scopes = sso:account:access
-sso_role_name = administrator
+sso_role_name = AWSAdministratorAccess
 sso_start_url = https://ncr-digitalbanking.awsapps.com/start#
 output = yaml
 region = us-west-2
